test/cli/test-gpol-custom-crd/resources/widget.yaml
apiVersion: example.com/v1
kind: Widget
metadata:
  name: my-widget
  namespace: test-namespace
spec:
  color: blue
