test/cli/test-gpol-custom-crd/clusterresources.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: clusterresources
spec:
  crds:
    - crds/widget-crd.yaml
  resources:
    - apiVersion: v1
      kind: Namespace
      metadata:
        name: test-namespace
