test/cli/test-gpol-custom-crd/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
clusterResources:
- clusterresources.yaml
kind: Test
metadata:
  name: test-gpol-custom-crd
policies:
- policy.yaml
resources:
- resources/widget.yaml
results:
- generatedResource: generated/configmap.yaml
  isGeneratingPolicy: true
  kind: Widget
  policy: generate-configmap-for-widget
  resources:
  - test-namespace/my-widget
  result: pass
